err/django-mauveinternet.err
Listing '.'...
Listing './bin'...
Compiling './bin/pilconvert.py'...
Compiling './bin/pildriver.py'...
Compiling './bin/pilfile.py'...
Compiling './bin/pilfont.py'...
Compiling './bin/pilprint.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/Pillow-2.3.2.egg-info'...
Listing './lib/python3.5/site-packages/django_mauveinternet-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/mauveinternet'...
Listing './lib/python3.5/site-packages/mauveinternet/calendar'...
Compiling './lib/python3.5/site-packages/mauveinternet/calendar/__init__.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/calendar/__init__.py", line 57
    print "start_month:", month
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mauveinternet/content_scoring'...
Listing './lib/python3.5/site-packages/mauveinternet/content_scoring/templatetags'...
Listing './lib/python3.5/site-packages/mauveinternet/devtools'...
Listing './lib/python3.5/site-packages/mauveinternet/devtools/management'...
Listing './lib/python3.5/site-packages/mauveinternet/devtools/management/commands'...
Listing './lib/python3.5/site-packages/mauveinternet/emailing'...
Listing './lib/python3.5/site-packages/mauveinternet/help'...
Listing './lib/python3.5/site-packages/mauveinternet/help/templates'...
Listing './lib/python3.5/site-packages/mauveinternet/help/templates/help'...
Listing './lib/python3.5/site-packages/mauveinternet/help/templatetags'...
Compiling './lib/python3.5/site-packages/mauveinternet/help/templatetags/help.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/help/templatetags/help.py", line 51
    raise TemplateSyntaxError, "%r tag requires exactly one argument" % name
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mauveinternet/markdown'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/css'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/icons'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/images'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/js'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/js/livepipe'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/static/mimarkdown/js/livepipe/lib'...
Listing './lib/python3.5/site-packages/mauveinternet/markdown/templatetags'...
Listing './lib/python3.5/site-packages/mauveinternet/ordering'...
Compiling './lib/python3.5/site-packages/mauveinternet/ordering/forms.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/ordering/forms.py", line 78
    except Lockable.InvalidPassphrase, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mauveinternet/ordering/order.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/ordering/order.py", line 67
    raise NotImplementedError, "BasketCharge subclasses must define get_charge to return their charge or discount value"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mauveinternet/ordering/picklefield.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/ordering/picklefield.py", line 34
    raise exceptions.ValidationError, "This value must be an instance of %s."%self.value_class.__name__
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mauveinternet/ordering/templates'...
Listing './lib/python3.5/site-packages/mauveinternet/ordering/templates/ordering'...
Listing './lib/python3.5/site-packages/mauveinternet/ordering/templatetags'...
Compiling './lib/python3.5/site-packages/mauveinternet/ordering/templatetags/item_views.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/ordering/templatetags/item_views.py", line 35
    raise TemplateSyntaxError, "%r tag requires exactly one arguments" % name
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mauveinternet/ordering/templatetags/quantity.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/ordering/templatetags/quantity.py", line 30
    raise TemplateSyntaxError, "%r tag requires exactly one arguments" % name
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mauveinternet/svggraph'...
Listing './lib/python3.5/site-packages/mauveinternet/tags'...
Listing './lib/python3.5/site-packages/mauveinternet/tags/templates'...
Listing './lib/python3.5/site-packages/mauveinternet/tags/templates/forms'...
Listing './lib/python3.5/site-packages/mauveinternet/tags/templatetags'...
Compiling './lib/python3.5/site-packages/mauveinternet/tags/templatetags/styledblocks.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/tags/templatetags/styledblocks.py", line 35
    raise TemplateSyntaxError, "%r tag requires exactly one arguments" % name
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mauveinternet/thumbnail.py'...
***   File "./lib/python3.5/site-packages/mauveinternet/thumbnail.py", line 365
    print file.name
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
